<resources>
    <string name="app_name">Bowling Championship Manager</string>
    <string name="Import">Import</string>
    <string name="e_g_4">e.g. 4</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="_4_how_many_lanes">4) How many lanes?</string>
    <string name="create_championship">Create Championship</string>
    <string name="the_teams_are">The teams are:</string>
    <string name="hdcp_parameters">HDCP Parameters</string>
    <string name="name">Name</string>
    <string name="hdcp">HDCP</string>
    <string name="_3_type_of_game">3) Type of game:</string>
    <string name="pins">Pins</string>
    <string name="teams_vs_teams">Teams VS Teams</string>
    <string name="start_championship">Start Championship</string>
    <string name="handicap_parameters">Handicap Parameters</string>
    <string name="basis_scores">1) Basis scores:</string>
    <string name="for_beginners">For beginners</string>
    <string name="e_g_200">e.g. 200</string>
    <string name="_2_percentage_factor">2) Percentage factor:</string>
    <string name="_3_tavani">3) Up-limit:</string>
    <string name="for_teams_with_less_players">For teams with less players</string>
    <string name="for_advanced">For advanced</string>
    <string name="e_g_80">e.g. 80</string>
    <string name="save">Save</string>
    <string name="start_a_championship">Start a Championship</string>
    <string name="exit">Exit</string>
    <string name="round_1">Round 1</string>
    <string name="team_1">Team 1:</string>
    <string name="vs">VS</string>
    <string name="team_2">Team 2:</string>
    <string name="export">Export</string>
    <string name="import_the_file_of_the_scores">Import the file of the scores</string>
    <string name="player">Player</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="test">test</string>
    <string name="team">team</string>
    <string name="continue_championship">continue_championship</string>
    <string name="championship">Championship</string>
    <string name="round">Round</string>
    <string name="next_round">Next Round</string>
    <string name="cancel">Cancel</string>
    <string name="main_menu">Main Menu</string>
    <string name="select">Select</string>
    <string name="average">Average</string>
    <string name="statistics">Statistics</string>
    <string name="championships">Championships</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="rounds">Rounds</string>
    <string name="add_new_player">Add New Player</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sex">sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_2_import_a_file_with_the_data_of_the_players_or_the_teams">2) Import a file with the data of the players or the teams</string>
    <string name="edit">Edit</string>
    <string name="tip">Tip!</string>
    <string name="edit_player">Edit Player</string>
</resources>
