<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/statistics"
    android:textAppearance="@android:style/TextAppearance.Large"
    android:textStyle="bold"
    android:layout_gravity="center"
android:layout_marginTop="80dp" />


    <Button
        android:id="@+id/button_champs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#4CAF50"
        android:onClick="openNewActivity"
        android:text="@string/championships"
        android:textColor="#F9F9F9"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/button_teams"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#4CAF50"
        android:onClick="openNewActivity"
        android:text="@string/teams"
        android:textColor="#F9F9F9"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/button_pl"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#4CAF50"
        android:onClick="openNewActivity"
        android:text="@string/players"
        android:textColor="#F9F9F9"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/button_rounds"
        android:layout_width="150dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:onClick="openNewActivity"
        android:text="@string/rounds"
        android:textColor="#F9F9F9"
        android:textSize="16sp"
        android:layout_gravity="center" />


</LinearLayout>
    </ScrollView>
    </LinearLayout>