<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoundActivity">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hdcp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1st"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2nd"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3rd"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hdcp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1st"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2nd"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3rd"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="650dp"
        tools:text="@string/Import" />

</androidx.constraintlayout.widget.ConstraintLayout>